src/k8s/storage-service/db/db-service.yaml
apiVersion: v1
kind: Service         
metadata:
  name: storage-db-clusterip-svc
spec:
  selector:
    app: storage-db  
  ports:
    - protocol: TCP
      port: 1433             
      targetPort: 1433      
  type: ClusterIP
